27 de febrero de 2016 Ximena Valero Modificación en carpeta Nómina pantalla novedades de nómina
pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
@@ -42,6 +42,7 @@ ingresarnueva= Ingresar una nueva Novedad
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
+salir=Salir
 atencion=ATENCI\u00d3N...!
 validacionNuevo=Para agregar una nueva novedad es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
