--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
@@ -62,6 +62,7 @@ errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
+seleccionarRegistroSel=Por favor seleccione una vigencia Sueldo para crear una Distribuci\u00f3n.
 errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 #Dialogo Nuevo Registro Pagina
 nuevoregistroparaingreso=Nuevo Registro Para Ingreso
@@ -80,15 +81,15 @@ observacionesVS=Observaciones:
 #DuplicarRegistroVS
 duplicarregistroVS=Duplicar Registro
 #Nuevo Registro VA
-nuevoregistroVA=Nuevo Registro Vigencias Sueldos
-ingresarnuevaVA=Ingresar nueva informaci\u00f3n para vigencias sueldos
+nuevoregistroVA=Nuevo Registro de Distribuci\u00f3n
+ingresarnuevaVA=Ingresar nueva informaci\u00f3n de Distribuci\u00f3n
 fechainicialVA=*Fecha Inicial: 
 fechafinalVA=Fecha Final: 
 terceroVA=*Tercero: 
 tipoentidadVA=*Tipo Entidad: 
-valorVA=Valor: 
+valorVA=*Valor: 
 #DuplicarRegistroVA
-duplicarregistroVA=Duplicar Registro Vigencias Afiliaciones
+duplicarregistroVA=Duplicar Registro Distribuci\u00f3n
 #EDITAR
 editarFechaVigenciaD=Fecha Vigencia Sueldo
 editarMotivoCambioSueldoD=Motivo Cambio Sueldo
@@ -102,7 +103,7 @@ editarTipoEntidadVAD=Tipo Entidad
 editarFechaInicialVAD=Fecha I. Vigencia Sueldo
 editarFechaFinalVAD=Fecha F. Vigencia Sueldo
 #Dialogos Varios
-guardarCambiosVigenciasAfiliaciones=\u00bfDesea guardar los cambios realizados en Vigencias Afiliaciones?
+guardarCambiosVigenciasAfiliaciones=\u00bfDesea guardar los cambios realizados en Distribuci\u00f3n?
 negacionNuevaS= Los campos Fecha Vigencia, Motivo Cambio Sueldo, Tipo Sueldo y Valor son obligatorios.
 negacionBorradoVS=Para eliminar el registro Vigencia Salario es NECESARIO que la Vigencia Afilicion este vacia.
 #EXPORTAR
