--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadtercero.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadtercero.properties
@@ -30,7 +30,8 @@ inicialNOV=Inicial
 finalNOV=Final
 valorNOV=Valor
 saldoNOV=Saldo
-codigoNOV=Codigo
+codigoNOV=Cod
+codigoNOVTool=C\u00f3digo de la periodicidad
 descripcionperiodicidadNOV=Descripci\u00f3n Periodicidad
 formulasNOV=Formulas
 horasdiasNOV=Horas/Dias
@@ -53,6 +54,7 @@ ingresarnuevo=Ingresar una Nueva Novedad
 empleadoN=Empleado: 
 nombreN=Nombre Empleado: 
 codigoN=Codigo: 
+conceptoN=Concepto:
 descripcionconceptoN=Descripcion Concepto: 
 fechainicialN=Fecha Inicial: 
 fechafinalN=Fecha Final: 
@@ -73,7 +75,7 @@ fecha=La fecha inicial de una Novedad no puede ser menor a la fecha final de la 
 editarEmpleadosCodigos=Empleado Codigo
 editarEmpleadosNombres=Empleado Nombre
 editarConceptosCodigos=Codigo concepto
-editarConceptosDescripcion=Codigo Descripcion
+editarConceptosDescripcion=Concepto Descripcion
 editFechaInicial=Fecha Inicial
 editFechasFinales=Fecha Final
 editarValores=Valor
@@ -109,6 +111,7 @@ tercerosT=Terceros
 buscarT=Buscar Tercero: 
 nitT=N.I.T
 nombreT=Nombre
+empresaT=Empresa
 #Duplicar Registro
 duplicarregistro=Duplicar Registro
 #EXPORTAR
@@ -148,3 +151,4 @@ validacionNuevo=Para agregar una nueva novedad es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+salir=salir
