05 de marzo de 2016 Edwin Hastamorir Se modifica el diseño de la pantilla y de nominaF cambiando la distribución de los marcos principales, los fondos de cada panel y la inclusión de nuevos elementos gráficos.

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
@@ -1,5 +1,5 @@
 #Titulo y Fieldsets
-titulo=Designer.NOM
+titulo=Designer.NOM - La Facilidad de Liquidar y Contabilizar N&oacute;mina con Talento Humano
 tipopersonal=Tipo Personal
 informacionpersonal=Informaci\u00f3n Personal
 informacionlaboral=Informaci\u00f3n Laboral
@@ -140,6 +140,7 @@ ingresohojadevida2= la Hoja de Vida de los Empleados.
 reporteslaborales1=REPORTES LABORALES: Permite Generar Reportes
 reporteslaborales2= Preestablecidos de datos laborales.
 bienvenido=Bienvenido(a):
+acercade1=ACERCA DE: Informaci&oacute;n del sistema.
 #TAB DE NOMINA!!!!!!!!!!!!!!!
 periodoeneltiempodesde=DESDE: 
 hasta= HASTA:
