14 de marzo de 2016 Edwin Hastamorir Se refina el diseño de la pantilla y de nominaF incluyendo nuevos íconos y la organización de etiquetas.

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
@@ -140,7 +140,7 @@ ingresohojadevida2= la Hoja de Vida de los Empleados.
 reporteslaborales1=REPORTES LABORALES: Permite Generar Reportes
 reporteslaborales2= Preestablecidos de datos laborales.
 bienvenido=Bienvenido(a):
-acercade1=ACERCA DE: Informaci&oacute;n del sistema.
+acercade1=ACERCA DE: Informaci\u00f3n del sistema.
 #TAB DE NOMINA!!!!!!!!!!!!!!!
 periodoeneltiempodesde=DESDE: 
 hasta= HASTA:
