--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto.properties
@@ -68,7 +68,7 @@ noo=NO
 #Parte de Abajo
 cconcepto=Clonar Concepto
 cnnc=C\u00f3digo y Nombre del nuevo concepto:
-cncc=C\u00f3digo y Nombre del concepto a clonar (Utilize lista de valores):
+cncc=C\u00f3digo y Nombre del concepto a clonar:
 clonar=[Clonar]
 grupoconceptos=[Grupo Conceptos]
 conceptosredondeos=[Conceptos Redondeos]
