19 de Marzo de 2016 Ximena Valero Modificación de las pantallas en la carpeta Novedades: -Novedad por empleado -Novedad por concepto -Novedad por tercero -Ausentismo
pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadtercero.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadtercero.properties
@@ -8,7 +8,7 @@ todas=Todas las Novedades
 actuales=Novedades Actuales
 #Tabla de Terceros
 nit=N.I.T
-descripcion=Descripcion del Tercero
+descripcion=Descripcion
 #Toolbar
 guardar=Guardar
 editar=Editar
