--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto.properties
@@ -70,9 +70,9 @@ cconcepto=Clonar Concepto
 cnnc=C\u00f3digo y Nombre del nuevo concepto:
 cncc=C\u00f3digo y Nombre del concepto a clonar:
 clonar=[Clonar]
-grupoconceptos=[Grupo Conceptos]
-conceptosredondeos=[Conceptos Redondeos]
-unidadconcepto=[Unidad del Concepto]
+grupoconceptos=Grupos
+conceptosredondeos=Conceptos
+unidadconcepto=Unidades
 #Nuevo Registro
 nuevoregistro= Nuevo Registro
 ingresarnuevo= Ingresar un nuevo Concepto
