--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleconcepto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleconcepto.properties
@@ -234,3 +234,6 @@ cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 salir=Salir
+#Para historicos
+seleccionar=Seleccione la tabla para consultar rastros Historicos
+rastros=Rastros Historicos
