--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/legislacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/legislacion.properties
@@ -22,7 +22,7 @@ estado=Estado
 #CLONAR CONTRATO
 contratoaactualizar=Seleccione el contrato a actualizar:
 contratodeorigen=Seleccione el contrato de origen:
-reproducir=[Reproducir]
+reproducir=Reproducir
 buscar=Buscar Contrato
 mostrar=Mostrar Todos
 #Nuevo Contrato
