30 de Marzo de 2016 Ximena Valero Modificación de las pantallas en la carpeta Novedades: -Ausentismo -Empleados -Conceptos -Terceros
Actualizacion boton aceptar, cancelar, buscar y mostrar todos en la carpeta de personal

pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadconcepto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadconcepto.properties
@@ -8,7 +8,7 @@ todas=Todas las Novedades
 actuales=Novedades Actuales
 #Tabla de Conceptos
 codigoC=C\u00f3digo
-descripcionC=Descripcion del Concepto
+descripcionC=Descripcion
 #Toolbar
 guardar=Guardar
 editar=Editar
