02 de abril de 2016 Edwin Hastamorir Se habilitan los bordes para los elementos graficos que manejan estados por mouse.

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
@@ -31,8 +31,8 @@ cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar=Refrescar
 #Tipo Personal
-cargosdesempe\u00f1ados1=CARGOS DESEMPE\u00d1ADOS: Observe y/o ingrese todos los cargos
-cargosdesempe\u00f1ados2=que el empleado ha desempe\u00f1ado dentro de la empresa.
+cargosdesempenados1=CARGOS DESEMPE\u00d1ADOS: Observe y/o ingrese todos los cargos
+cargosdesempenados2=que el empleado ha desempe\u00f1ado dentro de la empresa.
 activos=Activos
 pensionados=Pensionados
 retirados=Retirados
@@ -43,7 +43,7 @@ informacionretirados=Ver Informaci\u00f3n del Personal Retirado
 informacionaspirantes=Ver Informaci\u00f3n del Personal Aspirante
 #Panel Derecho Superior
 codigo=C\u00f3digo
-primerapellido=Nombre completo
+primerapellido=Nombre Completo
 segundoapellido=Segundo Apellido
 nombre=Nombre
 #Botones con Imagen
@@ -60,22 +60,22 @@ dpe=datos Personales del Empelado.
 hojadevida=Hoja de Vida
 #PANEL CENTRAL
 cargodesempe\u00f1ado=Cargo Desempe\u00f1ado
-fechacontratacion=Fecha Contrataci\u00f3n
-normalaboral=Norma Laboral
-afiliaciones=Afiliaciones
-ibc=I.B.C
-tipoviajero=Tipo Viajero
+fechacontratacion=Fecha y Tipo de Contrataci\u00f3n
+normalaboral=Norma Laboral - Cesantias
+afiliaciones=Afiliaciones - Seguridad Social
+ibc=Ingreso Base de Cotizaci\u00f3n
+tipoviajero=Informaci\u00f3n Laboral Adicional
 centrodecosto=Centro de Costo - Localizaci\u00f3n
 tipotrabajador=Tipo Trabajador
 legislacionlaboral=Legislaci\u00f3n Laboral
-jornada=Jornada
-menorvalorretencion=Menor Valor Retencion
+jornada=Jornada Laboral - Turnos
+menorvalorretencion=Certificado Deducibles Retencion
 vacaciones=Vacaciones (Solo Consulta)
 sueldo=Sueldo
-tiposalario=Tipo Salario (Reforma Laboral)
+tiposalario=Tipo Salario
 ubicaciongeografica=Ubicaci\u00f3n Geogr\u00e1fica
-formadepago=Forma de Pago
-set=S.E.T
+formadepago=Forma de Pago - Periodicidad
+set=Porcentaje de Retenci\u00f3n
 comprobantesdepago=Comprobantes de Pago(S. Consulta)
 #Botones del panel Central
 #El primero es cargo desempe\u00f1ado, como el de la imagen
@@ -96,7 +96,7 @@ LegislacionLaboral1=LEGISLACIONES LABORALES: Observe y/o ingrese
 LegislacionLaboral2= la legislaci\u00f3n laboral a la cual pertenece.
 Jornada1=JORNADAS: Observe y/o ingrese las diferentes
 Jornada2= jornadas de trabajo que ha tenido el empleado.
-MenorValorRetencio1=MENORES VALORES DE RETENCION: Observe
+MenorValorRetencio1=CERTIFICADO DEDUCIBLES RETENCI\u00d3N: Observe
 MenorValorRetencio2= y/o ingrese todos los M.V.R.
 Vacaciones1=VACACIONES: Observe todos los hist\u00f3ricos de
 Vacaciones2= vacaciones que el empleado ha disfrutado.
@@ -152,7 +152,7 @@ formulasdeliquidacion=Formulas de Liquidaci\u00f3n
 legislacionlaboral=Legislaci\u00f3n Laboral
 opcionesdeliquidacion=Opciones de Liquidaci\u00f3n
 pagosautomaticos=Pagos Autom\u00e1ticos
-pagosnoautomaticos=Pagos NO Autom\u00e1ticos
+pagosnoautomaticos=Pagos Por Fuera de N\u00f3mina
 estadisticas=Estad\u00edsticas
 textoestadisticas=Facilita analizar los datos generados por la n\u00f3mina acorde a par\u00e1metros seleccionados.
 parametrosdeliquidacion=Par\u00e1metros de Liquidaci\u00f3n
