--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedaddefinitivas.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedaddefinitivas.properties
@@ -28,6 +28,7 @@ observaciones=Observaciones
 #NUEVO REGISTRO
 nuevoregistro=Nuevo Registro
 ingresarnuevo=Ingresar una nueva novedad
+ingresarduplicado=Duplicar una nueva novedad
 fechaliquidacionN=Fecha Liquidaci\u00f3n Definitiva: 
 motivoliquidacionN=Motivo Liq. Definitiva: 
 motivoretiroN=Motivo Retiro: 
