--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos.properties
@@ -80,7 +80,7 @@ si=Si
 no=No
 limpiar=Limpiar
 agregar=Agregar
-cancelar=
+cancelar=Cancelar
 atencion=ATENCI\u00d3N...!
 aceptar=
 atras=
@@ -111,3 +111,4 @@ seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 salir=Salir
 fechaDuplicada=La fecha ya esta registrada, por favor ingrese otra.
+infoRegistro=Registros:
