--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/rastro.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/rastro.properties
@@ -1,8 +1,10 @@
 titulo=Control de Operaciones
 permisos=Permisos
-buscar=Buscar por Fecha
+buscar=Por Fecha
+buscarL=Buscar por Fecha
 mostrar=Mostrar Todas
-consultar=Consultar Eliminados
+consultar=Eliminados
+consultarL=Consultar Eliminados
 insertados=Registros Insertados
 modificados=Registros Modificados
 #Tabla
