--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos.properties
@@ -112,3 +112,6 @@ errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con s
 salir=Salir
 fechaDuplicada=La fecha ya esta registrada, por favor ingrese otra.
 infoRegistro=Registros:
+#
+adicionarP=Adicionar porcentaje de riesgo al empleado
+reporteManual=Reporte manual de funciones
