--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/concepto.properties
@@ -71,7 +71,7 @@ cnnc=C\u00f3digo y Nombre del nuevo concepto:
 cncc=C\u00f3digo y Nombre del concepto a clonar:
 clonar=[Clonar]
 grupoconceptos=Grupos
-conceptosredondeos=Conceptos
+conceptosredondeos=Redondeos
 unidadconcepto=Unidades
 #Nuevo Registro
 nuevoregistro= Nuevo Registro
@@ -159,3 +159,5 @@ etTtip=Enviar a tesorer\u00eda
 codigoalternativoTtip=Codigo Alternativo
 #Advertencias
 continuar=continuar
+#Cantidad registros
+registros=Registros:
