--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos.properties
@@ -82,8 +82,8 @@ limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
 atencion=ATENCI\u00d3N...!
-aceptar=
-atras=
+aceptar=Aceptar
+atras=Atras
 validacionNuevo=Para agregar un nuevo registro es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
