--- a/DesignerRHN/DesignerRHN-war/web/WEB-INF/web.xml
+++ b/DesignerRHN/DesignerRHN-war/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <param-name>facelets.DEVELOPMENT</param-name>
         <param-value>false</param-value>
     </context-param>
+    <context-param>
+        <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+        <param-value>server</param-value>
+    </context-param>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -64,5 +68,9 @@
     <error-page>
         <error-code>500</error-code>
         <location>/PaginaNoEncontrada.xhtml</location>
+    </error-page>
+    <error-page>
+        <exception-type>javax.faces.application.ViewExpiredException</exception-type>
+        <location>/paginaexpiro.xhtml</location>
     </error-page>
 </web-app>
