12 de Abril de 2016 Ximena Valero Modificación de las pantallas en personal EmplVigenciasTiposContratos, EmplAfiliaciones, emplnormalaboral y emplacumulados
pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades.properties
@@ -64,3 +64,5 @@ departamentos=Departamentos
 #Validacion
 nombreVacio=El nombre de una ciudad no puede ser vacio
 salir=Salir
+
+infoRegistro=Registros:
