--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencianormalaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencianormalaboral.properties
@@ -58,3 +58,5 @@ validacionNuevaCentroCosto=Para agregar es necesario adicionar:
 mostrarBorrados=Se han borrado 
 validacionBorrar=No se puede borrar este elemento porque esta relacionado con otra tabla
 validacionDuplicarVigencia=Necesita: 
+
+infoRegistro=Registros:
