--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
@@ -104,3 +104,5 @@ fechaDuplicada=La fecha ya esta registrada, por favor ingrese otra.
 #HEAD
 pvH=Reconoce Prima de Vacaci\u00f3n
 scH=Soluci\u00f3n Continuidad
+#
+infoRegistro=Registros:
