--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplacumulados.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplacumulados.properties
@@ -97,3 +97,5 @@ validacionNuevo=Para agregar un nuevo acto inseguro es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+
+infoRegistro=Registros:
