--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3.properties
@@ -104,3 +104,5 @@ errorObjetosDB=La tabla 'VIGENCIASAFILIACIONES' no se encuentra en ObjetosDB. Po
 errorFechas=La fecha inicial es menor a 01/01/1900 y/o la fecha final es menor que la fecha inicial.
 duplicarR=Duplicar informaci\u00f3n para vigencias afiliaciones
 salir=Salir
+
+infoRegistro=Registros:
