12 de abril de 2016 Edwin Hastamorir Segundas modificaciones a la página cuenta.xhtml

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cuenta.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cuenta.properties
@@ -23,6 +23,7 @@ limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
 atencion=ATENCI\u00d3N...!
+infoRegistro=Registros:
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva cuenta es necesario adicionar:
