--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
@@ -31,6 +31,8 @@ tipodeentidad=Tipo de Entidad
 #Botones Abajo
 consultar=Consultar Sueldo Actual
 todos=Consultar Todos
+consultarC=Sueldo Actual
+todosC=Mostrar Todos
 #LOV MOTIVO
 motivoM=Motivo Cambio Sueldo
 buscarM=Buscar Motivo Cambio Sueldo: 
