--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -29,7 +29,7 @@ salir=Salir
 ##
 
 titulo=Ingreso Nuevo Personal
-infoBasica=Ingrese los datos basicos del empleado nuevo. Tenga en cuenta que la informacion que se solicitara en este formulario es basica para poder liquidar al trabajador. Si desea completar informacion adicional puede ingresar a Datos Personales despues de insertar al empleado.
+infoBasica=Ingrese los datos basicos del empleado nuevo. Tenga en cuenta que la informacion que se solicita en este formulario es basica para poder liquidar al trabajador. Si desea completar informacion adicional puede ingresar a Datos Personales despues de insertar al empleado.
 informacionPersona=Informacion Nuevo Empleado
 modPersonal=Informacion Personal
 modCargo=Cargo Desempe\u00f1ado
