--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleconcepto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleconcepto.properties
@@ -237,3 +237,4 @@ salir=Salir
 #Para historicos
 seleccionar=Seleccione la tabla para consultar rastros Historicos
 rastros=Rastros Historicos
+infoRegistro=Registros:
