--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplcomprobante.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplcomprobante.properties
@@ -145,3 +145,4 @@ buscarCCC=Buscar Centro Costo:
 textTT=Indique si el comprobante fue entregado y/o pagado fisicamente al empleado
 entregadoC=\u00bfEntregado a empleado?:
 errorFechaEntregaNull=La fecha entregado no puede ser vacia si el campo Entregado a Empleado esta seleccionado
+infoRegistro=Registros:
