--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs.properties
@@ -124,3 +124,4 @@ errorFechas=La fecha inicial es nula y/o la fecha final es menor a la fecha inic
 errorRegNewOtro=Los campos Fecha Inicial, Fecha Final Y Tipo Certificado son obligatorios.
 errorFechasOC=la fecha inicial es menor que la fecha final.
 salir=Salir
+infoRegistro=Registros:
