--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica.properties
@@ -70,3 +70,4 @@ fechaDuplicada=La fecha ya esta registrada, por favor ingrese otra.
 fechaVacia=La fecha no puede ser vacia.
 #VALIDACIONES
 validacioModificarVigenciaFechas=Al modificar no pueden haber:
+infoRegistro=Registros:
