--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente.properties
@@ -82,3 +82,4 @@ seleccionarRegistro=Por favor seleccione un registro.
 seleccionarRegistroP=Para duplicar por favor seleccione un registro de Vacaciones Pendientes.
 DPro=Dias Provisionados
 DFC=Fecha Contrataci\u00f3n
+infoRegistro=Registros:
