--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaformapago.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaformapago.properties
@@ -92,3 +92,4 @@ salir=Salir
 tcH=Tipo Cuenta
 #Validaciones
 validacionFechas=La fecha que desea ingresar ya est\u00e1 registrada en el sistema
+infoRegistro=Registros:
