--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
@@ -162,3 +162,4 @@ errorFechas=la fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a
 negacionNuevaVLPP=Los campos Fecha Inicial-Proyecto-Porcentaje son obligatorios.
 #ERROR Porcentajes
 errorPorcentaje=El porcenteje debe ser un numero en el rango de 0 a 100
+infoRegistro=Registros:
