--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciareformalaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciareformalaboral.properties
@@ -64,3 +64,4 @@ seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla 'VIGENCIASREFORMASLABORALES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 errorFechas=La fecha vigencia es menor a 01/01/1900.
 errorRegNew=Los campos Fecha Vigencia-Reforma Laboral son obligatorios.
+infoRegistro=Registros:
