--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructura.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/estructura.properties
@@ -80,3 +80,4 @@ errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros as
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla 'ORGANIGRAMAS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 salir=Salir
+infoRegistro=Registros:
