--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/gruposfr.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/gruposfr.properties
@@ -54,3 +54,4 @@ duplicarD=Duplicar Registro
 duplicarDD=Duplicar Grupo Factor Riesgo(F.R)
 codigoE=Codigo
 descripcionE=Descripcion
+infoRegistro=Registros:
