--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadtercero.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadtercero.properties
@@ -152,3 +152,4 @@ cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 salir=salir
+infoRegistro=Registros:
