--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
@@ -171,3 +171,4 @@ mostrarTodos=Mostrar todos los reportes.
 buscarReporte=Buscar Reportes.
 generarReporte=Generar Reporte.
 salir=Salir
+infoRegistro=Registros:
