--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/reformalaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/reformalaboral.properties
@@ -90,3 +90,4 @@ buscarRL=Buscar Reforma Laboral:
 errorClonadoReforma=Los campos Codigo - Nombre de la Nueva Reforma y Codigo - Nombre de la reforma Origen son obligatorios.
 continuarOperacionClonado=\u00bfContinuar con la operacion de clonado?
 errorCodigoClonado=El codigo nuevo ya existe.
+infoRegistro=Registros:
