--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tiposueldo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tiposueldo.properties
@@ -139,3 +139,4 @@ codigoTE=Codigo
 nombreTE=Nombre
 errorNuevoRegistroTEFormula=Ya se registro un Tipo Entidad con la Empresa seleccionada.
 salir=Salir
+infoRegistro=Registros:
