--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/empleadoindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/empleadoindividual.properties
@@ -180,3 +180,4 @@ cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 infCargueFoto=Por favor seleccione una imagen con extenci\u00f3n (.JPG) y con un tama\u00f1o no mayor a 300 KB.
+infoRegistro=Registros:
