--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplsets.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplsets.properties
@@ -76,3 +76,4 @@ errorRegNew=Los campos Fecha Inicial-Promedio-Tipo Set son obligatorios y/o el p
 errorFechas=La fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a la fecha inicial.
 #Validaciones
 validacionFechas=La fecha que desea ingresar ya est\u00e1 registrada en el sistema
+infoRegistro=Registros:
