--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
@@ -123,3 +123,4 @@ errorFechas = La fecha de vigencia es menor a 01/01/1900.
 errorFechaDescanso=La fecha final es menor a la fecha inicial.
 errorNullDescanso=Los campos de fecha inicial y fecha final son obligatorios.
 seleccionarRegistroJT=Por favor seleccione un registro de Jornada de Trabajador.
+infoRegistro=Registros:
