--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador.properties
@@ -121,3 +121,4 @@ errorRegNewVTT=Los campos Fecha Vigencia-Tipo Trabajador son obligatorios.
 salir=Salir
 #VALIDACIONES
 validacionFechas=La fecha ya esta registrada, por favor ingrese otra.
+infoRegistro=Registros:
