--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/formula.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/formula.properties
@@ -98,3 +98,4 @@ cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 textP=Indica si la periodicidad es independiente
 salir=Salir
+infoRegistro=Registros:
