--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/empllegislacionlaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/empllegislacionlaboral.properties
@@ -76,3 +76,4 @@ tipocontratoXX=Tipo_Contrato
 legislacionlaboral=Legislacion Laboral
 errorFechas=La fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a la fecha inicial.
 errorRegNew=Los campos Fecha Inicial-Legislacion Laboral son obligatorios.
+infoRegistro=Registros:
