--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos.properties
@@ -115,3 +115,6 @@ infoRegistro=Registros:
 #
 adicionarP=Adicionar porcentaje de riesgo al empleado
 reporteManual=Reporte manual de funciones
+# 
+empleado=Empleado:
+codigo=Codigo:
