--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs.properties
@@ -103,13 +103,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo registro es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar=Deshacer cambios no guardados
 #RASTRO
 confirmarRastro=La tabla 'MVRS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla MVRStiene rastros historicos, \u00bfDesea continuar?
@@ -125,3 +127,6 @@ errorRegNewOtro=Los campos Fecha Inicial, Fecha Final Y Tipo Certificado son obl
 errorFechasOC=la fecha inicial es menor que la fecha final.
 salir=Salir
 infoRegistro=Registros:
+# 
+empleado=Empleado:
+codigo=Codigo:
