--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
@@ -141,13 +141,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCION...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo registro es necesario ingresar:
 cambiosRealizados=Desea guardar los cambios realizados?
 cambio=Hay cambios sin guardar, desea guardar los cambios?
-refrescar= Refrescar
+refrescar=Deshacer cambios no guardados
 #RASTRO
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
@@ -163,3 +165,6 @@ negacionNuevaVLPP=Los campos Fecha Inicial-Proyecto-Porcentaje son obligatorios.
 #ERROR Porcentajes
 errorPorcentaje=El porcenteje debe ser un numero en el rango de 0 a 100
 infoRegistro=Registros:
+# 
+empleado=Empleado:
+codigo=Codigo:
