--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
@@ -79,13 +79,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva ubicacion es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar=Deshacer cambios no guardados
 salir=Salir
 #RASTRO
 confirmarRastro=La tabla 'VIGENCIASTIPOSCONTRATOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
@@ -106,3 +108,6 @@ pvH=Reconoce Prima de Vacaci\u00f3n
 scH=Soluci\u00f3n Continuidad
 #
 infoRegistro=Registros:
+# 
+empleado=Empleado:
+codigo=Codigo:
