--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/empllegislacionlaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/empllegislacionlaboral.properties
@@ -26,13 +26,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva legislacion es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar=Deshacer cambios no guardados
 #LOV Legislacion Laboral
 legislacionL=Legislacion Laboral
 buscarL=Buscar Legislaci\u00f3n Laboral:
@@ -77,3 +79,6 @@ legislacionlaboral=Legislacion Laboral
 errorFechas=La fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a la fecha inicial.
 errorRegNew=Los campos Fecha Inicial-Legislacion Laboral son obligatorios.
 infoRegistro=Registros:
+# 
+empleado=Empleado:
+codigo=Codigo:
