--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente.properties
@@ -29,13 +29,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva vacacion es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar=Deshacer cambios no guardados
 #Exportar VP
 estadoVPX=Estado
 diaspendientesVPX=Dias Pendientes
@@ -83,3 +85,6 @@ seleccionarRegistroP=Para duplicar por favor seleccione un registro de Vacacione
 DPro=Dias Provisionados
 DFC=Fecha Contrataci\u00f3n
 infoRegistro=Registros:
+# 
+empleado=Empleado:
+codigo=Codigo:
