--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
@@ -112,15 +112,20 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo registro es necesario ingresar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar=Deshacer cambios no guardados
 errorFechas = La fecha de vigencia es menor a 01/01/1900.
 errorFechaDescanso=La fecha final es menor a la fecha inicial.
 errorNullDescanso=Los campos de fecha inicial y fecha final son obligatorios.
 seleccionarRegistroJT=Por favor seleccione un registro de Jornada de Trabajador.
 infoRegistro=Registros:
+# 
+empleado=Empleado:
+codigo=Codigo:
