--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciareformalaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciareformalaboral.properties
@@ -45,14 +45,16 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
 validacionDuplicar=Para duplicar un nuevo ausentismo es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar=Deshacer cambios no guardados
 #RASTRO
 confirmarRastro=La tabla 'VIGENCIASREFORMASLABORALES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla VIGENCIASREFORMASLABORALES tiene rastros historicos, \u00bfDesea continuar?
@@ -65,3 +67,6 @@ errorObjetosDB=La tabla 'VIGENCIASREFORMASLABORALES' no se encuentra en ObjetosD
 errorFechas=La fecha vigencia es menor a 01/01/1900.
 errorRegNew=Los campos Fecha Vigencia-Reforma Laboral son obligatorios.
 infoRegistro=Registros:
+# 
+empleado=Empleado:
+codigo=Codigo:
