--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciascargos.properties
@@ -81,13 +81,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo registro es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar=Deshacer cambios no guardados
 #Dialogo Propio
 necesitaFecha=Para seleccionar una estructura, primero es necesario asignar una fecha.
 #Exportar
