--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
@@ -133,7 +133,9 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevoS=Para agregar un nuevo salario es necesario adicionar:
@@ -142,7 +144,7 @@ validacionDuplicarS=Para duplicar un nuevo salario es necesario adicionar:
 validacionDuplicarA=Para duplicar una nueva Distribuc\u00edon es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar=Deshacer cambios no guardados
 errorFechasVS=La fecha vigencia es menor a 01/01/1900 y/o la vigencia del retroactivo es menor a 01/01/1900.
 errorFechasVA=la fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a la fecha inicial.
 negacionNuevaVA=Los campos Fecha Inicial-Tercero-Tipo Entidad son obligatorios.
@@ -152,3 +154,6 @@ salir=salir
 viReTooltip=Vigencia Retroactivo
 activarRTooltip=Activar/Desactivar Retroactivo
 infoRegistro=Registros:
+# 
+empleado=Empleado:
+codigo=Codigo:
