19 de abril de 2016 Edwin Hastamorir Modificacion de la página EmpleadoIndividual para que se puedan visualizar los íconos.

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/empleadoindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/empleadoindividual.properties
@@ -10,10 +10,16 @@ actividades=Actividades de bienestar y familiares
 guardar=Guardar
 editar=Editar
 lista=Lista de Valores
+filtrar=Filtrar
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
+nuevo=Nuevo registro
+eliminar=Eliminar registro
+duplicar=Duplicar registro
 rastro=Rastro
+refrescar=Deshacer cambios no guardados
+salir=Salir
 #Arriba
 apellidosynombre=Apellidos y Nomb.
 apellidosynombreTT=Apellidos y Nombres de la Persona
@@ -173,11 +179,12 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+atencion=\u00a1INFORMACI\u00d3N!
+alerta=\u00a1PRECAUCI\u00d3N!
+error=\u00a1ERROR!
 aceptar=Aceptar
 atras=Atras
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
 infCargueFoto=Por favor seleccione una imagen con extenci\u00f3n (.JPG) y con un tama\u00f1o no mayor a 300 KB.
 infoRegistro=Registros:
