--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/empllegislacionlaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/empllegislacionlaboral.properties
@@ -9,7 +9,7 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Registro
+nuevo=Insertar Registro
 eliminar=Borrar Registro
 duplicar=Duplicar Registro
 rastro=Rastro
