--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
@@ -12,9 +12,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nueva Vigencia Localizacion
-eliminar=Borrar Vigencia Localizacion
-duplicar=Duplicar Vigencia Localizacion
+nuevo=Insertar Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 salir=Salir 
 #Tabla de Arriba
@@ -52,7 +52,7 @@ codigoLP=Codigo
 localLP=Localizacion
 empresaLP=Empresa
 #Verificar Rastros Tablas
-rastros=Rastros para tablas Historicos Localizaciones
+rastros=Rastros Historicos para tablas de Localizaciones
 seleccionar=Seleccione la tabla para consultar rastros Historicos
 vl=Vigencia Localizacion
 vp=Vigencia Prorrateo
