--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciareformalaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciareformalaboral.properties
@@ -8,9 +8,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nuevo Vigencia Reforma Laboral
-eliminar=Borrar Vigencia Reforma Laboral
-duplicar=Duplicar Vigencia Reforma Laboral
+nuevo=Insertar Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 salir=Salir
 #Tabla
