--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
@@ -9,9 +9,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nueva Vigencia Tipo Contrato
-eliminar=Borrar Vigencia Tipo Contrato
-duplicar=Duplicar Vigencia Tipo Contrato
+nuevo=Insertar registro
+eliminar=Borrar registro
+duplicar=Duplicar registro
 rastro=Rastro
 #Tabla
 fecha=Fecha
@@ -97,7 +97,7 @@ errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'VIGENCIASTIPOSCONTRATOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 fispX=Fecha Inicio Proceso Sustitucion
 fispXX=Fecha_Inicio_Proceso_Sustitucion
 fispH=Fecha Sus.
