27 de Abril de 2016 Ximena Valero Modificación de algunas pantallas en carpeta personal
pendientes por revisar

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplsets.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplsets.properties
@@ -29,13 +29,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+atencion=\u00a1PRECAUCI\u00d3N...!
+error=ERROR
+informacion=\u00a1INFORMACI\u00d3N...!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo SET es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 #RASTRO
 confirmarRastro=La tabla 'SETS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla SETS tiene rastros historicos, \u00bfDesea continuar?
@@ -76,4 +78,7 @@ errorRegNew=Los campos Fecha Inicial-Promedio-Tipo Set son obligatorios y/o el p
 errorFechas=La fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a la fecha inicial.
 #Validaciones
 validacionFechas=La fecha que desea ingresar ya est\u00e1 registrada en el sistema
+
 infoRegistro=Registros:
+empleado=Empleado
+codigo=C\u00f3digo
