--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplubicaciongeografica.properties
@@ -49,13 +49,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+atencion=\u00a1PRECAUCI\u00d3N...!
+error=ERROR
+informacion=\u00a1INFORMACI\u00d3N...!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva ubicacion es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 #RASTRO
 confirmarRastro=La tabla 'VIGENCIASUBICACIONES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla VIGENCIASUBICACIONES tiene rastros historicos, \u00bfDesea continuar?
@@ -70,4 +72,7 @@ fechaDuplicada=La fecha ya esta registrada, por favor ingrese otra.
 fechaVacia=La fecha no puede ser vacia.
 #VALIDACIONES
 validacioModificarVigenciaFechas=Al modificar no pueden haber:
+#
 infoRegistro=Registros:
+empleado=Empleado
+codigo=C\u00f3digo
