--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaafiliacion3.properties
@@ -9,9 +9,9 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nueva Vigencia Afiliaci\u00f3n
-eliminar=Borrar Vigencia Afiliaci\u00f3n
-duplicar=Duplicar Vigencia Afiliaci\u00f3n
+nuevo=Nuevo Registro
+eliminar=Borrar Registro
+duplicar=Duplicar Registro
 rastro=Rastro
 #Tabla
 inicial=Fecha Inicial
@@ -20,6 +20,7 @@ tipoentidad=Tipo de Entidad
 tercero=Nombre Tercero
 terceronit=N.I.T
 codigo=C\u00f3digo
+empleado=Empleado
 estado=Estado Afiliacion
 observaciones=Observacion
 #LOV TIPO ENTIDAD
@@ -85,13 +86,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+precaucion=\u00a1PRECAUCI\u00d3N...!
+error=\u00a1ERROR...!
+informacion=INFORMACI\u00d3N
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva afiliacion es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 #RASTRO
 confirmarRastro=La tabla 'VIGENCIASAFILIACIONES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla VIGENCIASAFILIACIONES tiene rastros historicos, \u00bfDesea continuar?
