--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaformapago.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaformapago.properties
@@ -18,13 +18,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+atencion=\u00a1PRECAUCI\u00d3N...!
+error=ERROR
+informacion=\u00a1INFORMACI\u00d3N...!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva legislacion es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 #RASTRO
 confirmarRastro=La tabla 'VIGENCIASFORMASPAGOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla VIGENCIASFORMASPAGOS tiene rastros historicos, \u00bfDesea continuar?
@@ -93,3 +95,4 @@ tcH=Tipo Cuenta
 #Validaciones
 validacionFechas=La fecha que desea ingresar ya est\u00e1 registrada en el sistema
 infoRegistro=Registros:
+empleado=Empleado
