--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencianormalaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencianormalaboral.properties
@@ -18,13 +18,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+precaucion=\u00a1PRECAUCI\u00d3N...!
+error=\u00a1ERROR...!
+informacion=INFORMACI\u00d3N
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva legislacion es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 #RASTRO
 confirmarRastro=La tabla 'VIGENCIASNORMASEMPLEADOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla VIGENCIASNORMASEMPLEADOS tiene rastros historicos, \u00bfDesea continuar?
@@ -60,3 +62,4 @@ validacionBorrar=No se puede borrar este elemento porque esta relacionado con ot
 validacionDuplicarVigencia=Necesita: 
 
 infoRegistro=Registros:
+empleado=Empleado
