--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportelaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportelaboral.properties
@@ -90,7 +90,7 @@ atras=Atras
 validacionNuevo=Para agregar un nuevo reporte es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 #Tipos
 pdf=PDF
 xhtml=XHTML
@@ -111,3 +111,5 @@ salir=Salir
 mostrarTodos=Mostrar todos los reportes
 buscarReporte=Buscar Reportes.
 generarReporte=Generar Reporte.
+#
+infoRegistro=Registros:
