--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/tercero.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/tercero.properties
@@ -168,7 +168,7 @@ atras=Atras
 validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 #RASTRO
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
@@ -179,3 +179,5 @@ errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con s
 errorDatosNullTerceros=Los campos NIT - Nombre son obligatorios.
 errorDatosNullSucursal=El campo Codigo Sucursal es obligatorio
 salir=Salir
+
+infoRegistro=Registros:
