--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplibcs.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplibcs.properties
@@ -18,13 +18,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+precaucion=\u00a1PRECAUCI\u00d3N...!
+error=\u00a1ERROR...!
+informacion=INFORMACI\u00d3N
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva legislacion es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar=Deshacer cambios no guardados
 #RASTRO
 confirmarRastro=La tabla 'VIGENCIASNORMASEMPLEADOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla VIGENCIASNORMASEMPLEADOS tiene rastros historicos, \u00bfDesea continuar?
@@ -58,3 +60,7 @@ inicialX=Fecha_Inicial
 finalX=Fecha_Final
 valorX=Valor
 salir=Salir
+
+infoRegistro=Registros:
+codigo=C\u00f3digo
+empleado=Empleado
