--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplnovedad.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplnovedad.properties
@@ -81,5 +81,7 @@ atras=Atras
 validacionNuevo=Para agregar una nueva novedad es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 salir=Salir
+
+infoRegistro=Registros:
