--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplviajero.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplviajero.properties
@@ -18,13 +18,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+precaucion=\u00a1PRECAUCI\u00d3N...!
+error=ERROR
+informacion=\u00a1INFORMACI\u00d3N...!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva legislacion es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 #RASTRO
 confirmarRastro=La tabla 'VIGENCIASVIAJEROS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla VIGENCIASVIAJEROS tiene rastros historicos, \u00bfDesea continuar?
@@ -33,7 +35,7 @@ errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'VIGENCIASVIAJEROS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'VIGENCIASVIAJEROS' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 #NuevoRegistro
 nuevoregistro=Nuevo Registro
 ingresarnuevo=Ingresar nueva informacion del empleado
@@ -59,4 +61,7 @@ fechaN=Fecha:
 tipoViajeroN=Tipo Viajero: 
 tipoViajeroXX=Tipo_Viajero
 fechaX=Fecha
+#
 infoRegistro=Registros:
+#
+empleado=Empleado
